# isolade

./: .gitignore  .gitmodules  .oxlintrc.json  CHANGELOG.md  README.md  biome.json  package.json  tsconfig.json
.github/actions/microsandbox/: action.yml
.github/workflows/: ci.yml  prepare-release.yml  publish-release.yml
app/: .gitignore  Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/src/: lib.rs
patches/: microsandbox@0.6.6.patch
scripts/: README.md  app.sh  bootstrap-microsandbox.sh  build.sh  check-release-metadata.sh  ci-linux.sh  ci-macos.sh  create-signing-cert.sh  dev.sh  prepare-release.py  refresh-catalog.ts  seed-usage.ts
scripts/lib/: assemble-msb-runtime.sh  build-msb-native.sh  build-msb.sh  collect-corresponding-source.sh  common.sh  generate-app-icons.sh  generate-third-party-licenses.ts  setup-signing-keychain.sh
