[package]
name = "app"
# Not the app version — that lives in tauri.conf.json (the single source of
# truth: it feeds the bundle metadata, ISOLADE_APP_VERSION, and the update
# telemetry). This crate is never published, so its version stays at 0.0.0.
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
font-kit = "0.14"
libc = "0.2"
